<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:padding="18dp"
    tools:context="com.prointer.halle.MainActivity">


    <TextView
        android:id="@+id/titulo_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/titulo_login_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp"
        android:background="@color/azurcolor"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/login_str"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campo_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/titulo_login_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:hint="@string/login_ed_email_str"
        android:inputType="textShortMessage"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:textColor="@color/greyTextColor"
        android:textColorHint="@color/greyTextColor" />

    <TextView
        android:id="@+id/titulo_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/azurcolor"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/Senha"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />


    <Button
        android:id="@+id/button_Entrar"
        android:layout_width="750px"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_cadastrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Botao_Entrar"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_cadastrar"
        android:layout_width="280px"
        android:layout_height="100px"
        android:layout_alignLeft="@+id/img_logo_login"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/img_logo_login"
        android:layout_marginBottom="23dp"
        android:text="@string/Botao_cadastrar" />

    <EditText
        android:id="@+id/campo_login_senha"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titulo_login_senha"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="20px"
        android:textColor="@color/greyTextColor"
        android:textColorHint="@color/greyTextColor" />


</RelativeLayout>
